# vjepa2

./: LICENSE  Makefile  README.md  pyproject.toml  requirements.txt  todo.md
cpu/configs/: eval.yaml  export.yaml  hdf5.yaml  train.yaml
docs/: en_concepts.md  fr_concepts.md
gpu/configs/: eval.yaml  export.yaml  hdf5.yaml  train.yaml
src/vjepa2/: __init__.py  config.py  logging.py  lossfn.py  lr_shedulers.py  model.py  onnx_export.py  optimizers.py  plotting.py
src/vjepa2/dataset/: __init__.py  cache.py  cleaning.py  clip_index.py  dataloader.py  discovery.py  factory.py  hdf5.py  image_dataset.py  image_io.py  masking.py  splits.py  transforms.py  video_dataset.py  video_io.py
src/vjepa2/entrypoints/: buildds.py  common.py  evaluate.py  exportencoder.py  inference.py  train.py
src/vjepa2/metrics/: __init__.py  base.py  ssl_metrics.py
src/vjepa2/modules/: __init__.py  attention.py  blocks.py  losses.py  mlp.py  patch_embed.py  pos_embs.py  predictor.py  tensors.py  vision_transformer.py  wrappers.py
src/vjepa2/training/: __init__.py  assembly.py  best_model.py  checkpoint.py  ema.py  evaluator.py  history.py  model.py  plotting_bridge.py  render.py  runs.py  trainer.py  utils.py
tests/: conftest.py  test_checkpoint.py  test_dataset.py  test_ema.py  test_export.py  test_losses.py  test_metrics.py  test_model.py  test_modules.py  test_optim_sched.py  test_predictor.py  test_training.py  test_vision_transformer.py
